<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KdWorks</string>
    <string name="action_settings">Settings</string>
    <string name="imgname">苏州分公司</string>
    <string name="name">用户：</string>
    <string name="password">密码：</string>
    <string name="Button1">取消</string>
    <string name="Button">确认</string>
    <string name="lab1">金蝶软件苏州分公司项目管理平台</string>
    <string name="lab2">开发者：卢伊林、董骊、艾群飞、夏晨宝</string>
    <string name="todo">Logo</string>
    <string name="t1">项目信息</string>
    <string name="t2">项目汇报</string>
    <string name="t3">项目周报</string>
    <string name="t4">提成管理</string>
    <string name="t5">外包管理</string>
    <string name="t6">项目协同</string>
    <string name="lab3">详细项目信息</string>
    <string name="lab4">添加项目汇报</string>
    <string name="lab5">添加项目周报</string>
    <string name="lab6">添加项目提成</string>
    <string name="lab7">添加外包申请</string>
    <string name="lab8">添加项目协同</string>

    <string-array name="prjlist">
        <item>苏州朗捷通智能科技有限公司</item>
        <item>苏州矽美仕绿色新能源有限公司</item>
        <item>苏州市国贸电子系统工程有限公司</item>
        <item>苏州维信电子有限公司</item>
        <item>苏州工业园区驿力机车科技有限公司</item>
        <item>苏州工业园区驿力机车科技有限公司</item>
        <item>江苏长顺集团有限公司</item>
        <item>江苏沙钢集团有限公司</item>
        <item>爱思客（苏州）清洁服务有限公司</item>
        <item>日电产精工（苏州）有限公司</item>
        <item>斯托科通讯产品（苏州）有限公司</item>
        <item>苏州工业园区驿力机车科技有限公司</item>
        <item>苏州工业园区驿力机车科技有限公司</item>
        <item>海玛特（中国）投资有限公司</item>
        <item>欧普照明股份有限公司</item>
    </string-array>
    <string name="hint_search_project">请输入项目名称</string>
    <string name="net_disconect">网络未连接，检查网络设置</string>
    <string name="prj_projectName">项目名称</string>
    <string name="prj_projectNo">项目编号</string>
    <string name="prj_conDays">合同人天</string>
    <string name="prj_impAmount">实施金额</string>
    <string name="prj_noDatas">未查询到和您相关的数据</string>
    <string name="prj_prjMember_name">姓名</string>
    <string name="prj_prjMember_role">项目角色</string>
    <string name="prj_prjMember_mobile">联系方式</string>

</resources>