<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:orientation="vertical" >

    <!-- android:background="@drawable/login" -->


    <!-- 第一层嵌套，按照1：1布局分为Login+Keyin -->


    <!-- Start布局可以嵌套,按照1：2的垂直比例 -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:gravity="center"
            android:src="@drawable/index02" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@string/lab1"
            android:text="@string/lab1"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- END布局可以嵌套,按照1：2的垂直比例 -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:orientation="vertical" >

        <!-- 第二层嵌套，Keyin部分，按照垂直1：1：2：6 -->


        <!-- 第二层嵌套         第一行：用户        luyilin   1布局 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <!-- 用户         布局 -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/name"
                    android:text="@string/name"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <!-- luyilin  布局 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/etUser"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFFFFFFF"
                    android:ems="10"
                    android:inputType="text" 
                    >

                    <requestFocus />
                </EditText>
            </LinearLayout>
        </LinearLayout>

        <!-- 第二层嵌套         第二行：密码       123   1布局 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <!-- 密码 -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/password"
                    android:text="@string/password"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <!-- 123 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFFFF"
                    android:ems="10"
                    android:inputType="textPassword" >

                    <requestFocus />
                </EditText>
            </LinearLayout>
        </LinearLayout>

        <!-- 第二层嵌套         第三行：确认     取消       2布局 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <!-- 确认     取消 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:text="@string/Button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/button1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button1"
                    android:text="@string/Button1" />
            </LinearLayout>
        </LinearLayout>

        <!-- 第二层嵌套         第四行：开发人      6布局 -->


        <!-- 布局可以嵌套 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:fontFamily="@string/lab2"
                android:gravity="center_horizontal"
                android:text="@string/lab2"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>